# C-project

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMPILE_NOTES.txt  Makefile  PROJECT_SUMMARY.md  PROJECT_TREE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  VISUAL_GUIDE.md  build.bat  build.sh
frontend/: index.html  script.js  style.css
include/: Building.h  CampusGraph.h  NavigationServer.h
src/: Building.cpp  CampusGraph.cpp  NavigationServer.cpp  main.cpp
